added the fake code

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   </head>
   <body>
 
-    <div class="console"></div>
+    <div class="console">
+      <div class="sun"></div>
+    </div>
 
   </body>
-  <script type="text/javascript" href="./main.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
 </html>
