--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 
-    <div class="console">
+    <div class="console" tabindex="0">
       <div class="sun"></div>
     </div>
 
