--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
   </head>
   <body>
 
-    <div class="console" tabindex="0">
-      <div class="sun"></div>
+    <!-- START SCREEN -->
+    <div class="start">YOU'RE ABOUT TO HACK TIME.<br />ARE YOU SURE?<br /><div><span id="yes" tabindex="1">YES</span> <span id="no" tabindex="2">NO</span></div>
+    </div>
+
+    <!-- HACKERMAN -->
+    <div class="console" tabindex="0"></div>
+
+    <!-- KUNG FURY -->
+    <div class="video">
+      that's fair<br /><iframe width="560" height="315" src="https://www.youtube.com/embed/fBfvqx7ScOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
   </body>
