--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     </div>
 
     <!-- HACKERMAN -->
-    <div class="console" tabindex="0"></div>
+    <div class="console" tabindex="0">
+      <div id="tab">hackerman.exe</div>
+    </div>
 
     <!-- KUNG FURY -->
     <div class="video">
