--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="./style.css"></script>
+    <script src="https://kit.fontawesome.com/25a49a4783.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -11,7 +12,26 @@
 
     <!-- HACKERMAN -->
     <div class="console" tabindex="0">
-      <div id="tab">hackerman.exe</div>
+      <div class="tab" id="tab1"> hackerman.exe <div class="icons">
+          <i class="fas fa-window-minimize"></i>
+          <i class="far fa-window-restore"></i>
+          <b>X</b>
+        </div> </div>
+      <div id="consoleBG"></div>
+      <div id="win1">
+        <div class="tab" id="tab2"> processor.ppt <div class="icons">
+            <i class="fas fa-window-minimize"></i>
+            <i class="far fa-window-maximize"></i>
+            <b>X</b>
+          </div> </div>
+      </div>
+      <div id="win2">
+        <div class="tab" id="tab3"> tracking.xyz <div class="icons">
+            <i class="fas fa-window-minimize"></i>
+            <i class="far fa-window-maximize"></i>
+            <b>X</b>
+          </div> </div>
+      </div>
     </div>
 
     <!-- KUNG FURY -->
